# Linemod

./: CMakeLists.txt  Note.md
include/object_recognition_renderer/: renderer3d.h  utils.h
linemod/: CMakeLists.txt
linemod/src/: linemod.cpp
linemod/src/App/: CMakeLists.txt  linemod_test.cpp  opencv_basic_test.cpp
renderer/: CMakeLists.txt
renderer/src/: CMakeLists.txt  model.cpp  model.h  renderer3d.cpp  utils.cpp
renderer/src/apps/: CMakeLists.txt
renderer/src/zyk_apps/: CMakeLists.txt  assimp_sample.cpp  learning_dataset_maker_from_ACCV3D.cpp  learning_dataset_maker_from_ACCV3D_ver2.cpp  linemod_trainer.cpp  project_render_test.cpp  simple_glut.cpp  simple_opengl_test.cpp
